unpackaged/main/default/objects/Weekly__c/Weekly__c.object-meta.xml
<CustomObject>
    <description>Keeps track of information we want to track weekly</description>
    <label>Weekly</label>
    <nameField>
        <label>Weeklies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weeklies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>