unpackaged/main/default/objects/Weekly__c/fields/Fac_verified_Higher_Ed__c.field-meta.xml
<CustomField>
    <fullName>Fac_verified_Higher_Ed__c</fullName>
    <label>Fac verified Higher Ed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>