unpackaged/main/default/objects/Weekly__c/fields/Fac_Verified_K12__c.field-meta.xml
<CustomField>
    <fullName>Fac_Verified_K12__c</fullName>
    <label>Fac Verified K12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>