unpackaged/main/default/objects/Weekly__c/fields/New_Adopts_Higher_Ed__c.field-meta.xml
<CustomField>
    <fullName>New_Adopts_Higher_Ed__c</fullName>
    <label>New Adopts Higher Ed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>