unpackaged/main/default/objects/Weekly__c/fields/New_Renewals_Higher_Ed__c.field-meta.xml
<CustomField>
    <fullName>New_Renewals_Higher_Ed__c</fullName>
    <label>New Renewals Higher Ed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>