unpackaged/main/default/objects/Weekly__c/fields/New_Students_K12__c.field-meta.xml
<CustomField>
    <fullName>New_Students_K12__c</fullName>
    <label>New Students K12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>