unpackaged/main/default/objects/Weekly__c/fields/Recorded_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Date_2__c</fullName>
    <formula>Recorded_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recorded Date 2</label>
    <type>Date</type>
</CustomField>