unpackaged/main/default/objects/Weekly__c/fields/Recorded_Date__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Date__c</fullName>
    <label>Recorded Date</label>
    <type>Date</type>
</CustomField>