unpackaged/main/default/objects/Weekly__c/fields/This_Week__c.field-meta.xml
<CustomField>
    <fullName>This_Week__c</fullName>
    <formula>Week_No__c 
=
MIN(  
 MCEILING(
  (
   IF( 
    MOD(YEAR( TODAY() ),4)=0, 
    366,
    365
   )
   -
   (
    DATE(YEAR( TODAY()),12,31) 
    - 
    TODAY()
   ) 
  ) 
  /7), 
 52
) 
-
IF( 
 WEEKDAY(DATE(YEAR(TODAY()),1,1)) = 1,
 0,
 IF(
  WEEKDAY(Today()) &gt;= WEEKDAY(DATE(YEAR(TODAY()),1,1)),
  1,
  0
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Week</label>
    <type>Checkbox</type>
</CustomField>