unpackaged/main/default/objects/Weekly__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recorded_Date__c</columns>
    <columns>New_Adopts_Higher_Ed__c</columns>
    <columns>New_Adopts_K12__c</columns>
    <columns>New_Students_Higher_Ed__c</columns>
    <columns>New_Students_K12__c</columns>
    <columns>New_Renewals_Higher_Ed__c</columns>
    <columns>New_Renewals_K12__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>